# cosmic-clicker-pro

./: .gitignore  README.md  build.yaml  build_all.py  clicker.py  index.html  pyproject.toml  requirements.txt  setup.py
scripts/: .gitignore
src/: cosmic_clicker_crossplatform.py
